<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Philip Regan
 * http://www.oatmealandcoffee.com
 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/oc_table_game_information"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1" >
		
    	<!-- Game Title Label and TextEdit -->
    	
        <TableRow
            android:id="@+id/oc_table_row_game_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_textview_game_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_INFORMATION_TITLE" />

        </TableRow>

        <TableRow
            android:id="@+id/oc_table_row_game_title_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/oc_edittext_game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/FPO_TITLE"
                android:inputType="text" />

        </TableRow>
		
        <!-- Game Intro Label and TextEdit -->
        
        <TableRow
            android:id="@+id/oc_table_row_game_intro_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_textview_game_intro_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_INFORMATION_INTRO" />

        </TableRow>

        <TableRow
            android:id="@+id/oc_table_row_game_intro_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <EditText
                android:id="@+id/oc_edittext_game_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/FPO_INTRO"
                android:inputType="textMultiLine" />

                <requestFocus />
            
        </TableRow>
        
        <!-- Game Time Unit Label and TextEdit -->
        
        <TableRow
            android:id="@+id/oc_table_row_game_time_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_textview_game_time_unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_INFORMATION_TIME_UNIT" />

        </TableRow>

        <TableRow
            android:id="@+id/oc_table_row_game_time_unit_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <EditText
                android:id="@+id/oc_edittext_game_time_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/FPO_TIME_UNIT"
                android:inputType="textMultiLine" />

                <requestFocus />
            
        </TableRow>
        
         <!-- Game Money Unit Label and TextEdit -->
        
        <TableRow
            android:id="@+id/oc_table_row_game_money_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_textview_game_money_unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_INFORMATION_MONEY_UNIT" />

        </TableRow>

        <TableRow
            android:id="@+id/oc_table_row_game_money_unit_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <EditText
                android:id="@+id/oc_textview_game_money_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/FPO_MONEY_UNIT"
                android:inputType="textMultiLine" />

                <requestFocus />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/oc_table_row_actions"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >
                
                <Button
                    android:id="@+id/oc_button_game_info_save"
                    android:layout_weight="1"
                    android:layout_width="0px"
                	android:layout_height="wrap_content"
                    android:text="@string/EDIT_SAVE" />

                <Button
                    android:id="@+id/oc_button_game_info_cancel"
                    android:layout_weight="1"
                    android:layout_width="0px"
                	android:layout_height="wrap_content"
                    android:text="@string/EDIT_CANCEL" />
            
        </TableRow>
        

</TableLayout>