<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Philip Regan
 * http://www.oatmealandcoffee.com
 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/oc_table_row_game_object_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/oc_textview_game_object_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FPO_TITLE"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/oc_table_row_game_object_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/oc_textview_game_object_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FPO_INTRO" />

    </TableRow>

    <TableRow
        android:id="@+id/oc_table_row_game_object_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/oc_button_game_object_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EDIT_FPO" />

    </TableRow>

</TableLayout>