<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Philip Regan
 * http://www.oatmealandcoffee.com
 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/oc_table_components"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/oc_table_row_game_component_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_text_view_game_component_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_COMPONENT_EDIT_GAME"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        
        <TableRow
            android:id="@+id/oc_table_row_game_component_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_text_view_game_component_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_COMPONENT_EDIT_PLAYER"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        

        <TableRow
            android:id="@+id/oc_table_row_game_component_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_text_view_game_component_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_COMPONENT_EDIT_TASKS"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/oc_table_row_game_component_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/oc_text_view_game_component_equipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAME_COMPONENT_EDIT_EQUIPMENT"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

</TableLayout>